# _cmd

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  KAKU-learning.md  LICENSE  README.md  VIEW-architecture.md  WARP-learning.md  assets-architecture.md  bypass.rs  ci-cd-architecture.md  docs-architecture.md  feature-architect.md  test_append  test_append.rs  test_wrap.rs  test_wrap2.rs  test_wrap3  test_wrap3.rs  test_wrap4  test_wrap4.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  ui.rs
crates/core/: Cargo.toml
crates/core/src/: engine.rs  history.rs  lib.rs  terminal.rs
crates/core/src/app/: mod.rs  panes.rs  registry.rs  terminals.rs  ui.rs
crates/core/tests/: directory_history.rs  history_persistence.rs
crates/desktop/: Cargo.toml
crates/desktop/src/: desktop_app.rs  main.rs  setup.rs  shell.rs  shortcuts.rs  theme.rs  transcript.rs
crates/desktop/src/components/: badges.rs  buttons.rs  dividers.rs  mod.rs  tooltips.rs
crates/desktop/src/panels/: settings.rs
crates/desktop/src/utils/: layout.rs  mod.rs  search.rs
crates/view-cli/: Cargo.toml
crates/view-cli/src/: main.rs  ui.rs
crates/view-core/: Cargo.toml
crates/view-core/src/: app.rs  lib.rs  listener.rs  terminal.rs
crates/view-core/src/app/: mod.rs  terminals.rs
crates/view-desktop/: Cargo.toml
crates/view-desktop/src/: desktop_app.rs  main.rs  shell.rs  shortcuts.rs  transcript.rs
crates/view-web/: Cargo.toml
crates/view-web/src/: api.rs  lib.rs  ws.rs
crates/web/: Cargo.toml
crates/web/src/: api.rs  lib.rs  ws.rs
docs/: cli.md  configuration.md  faq.md  features.md  keybindings.md
docs/architecture/: assets.md  ci-cd.md  docs.md  kaku-lessons.md  overview.md  roadmap.md
docs/superpowers/plans/: 2026-04-08-view-core-extraction.md
docs/superpowers/specs/: 2026-04-08-view-desktop-architecture-design.md
schemas/: camp.json  wasp.json
src/: app.rs  listener.rs  main.rs  ui.rs
warp/.agents/skills/warp-integration-test/: SKILL.md
