[package]
name = "desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Desktop mission-control shell for VIEW"
readme = "../../README.md"
keywords = ["desktop", "terminal", "agents", "workspace", "observability"]
categories = ["development-tools", "gui"]

[dependencies]
core = { path = "../core" }
web = { path = "../web" }
eframe = { version = "0.33", features = ["__screenshot"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
image = { version = "0.24", default-features = false, features = ["png"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12.5"
